# simple-imdb-user-review-crawler

./: LICENSE  README.md  example_save_title_user_reviews_as_csv.py  pyproject.toml
simple_imdb_user_review_crawler/: __init__.py  _imdb_user_review_crawler.py
tests/: test_simple_imdb_user_review_crawler.py
