[tool.poetry]
name = "simple-imdb-user-review-crawler"
version = "0.1.0"
description = "A simple IMDb User Review Crawler"
authors = ["Alexandre Harano <email@ayharano.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ayharano/simple-imdb-user-review-crawler"
repository = "https://github.com/ayharano/simple-imdb-user-review-crawler"
keywords = ["imdb", "crawler"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.19.0"
lxml = ">=4.6.3"
yarl = ">=1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
pre-commit = "^2.15.0"

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.venv
  |build
  |dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
